<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/repository_name"
        style="@style/BoldTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/repository_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/RegularTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@+id/repository_name"
        app:layout_constraintTop_toTopOf="@+id/repository_name" />

    <TextView
        android:id="@+id/full_name"
        style="@style/BoldTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/full_name"
        app:layout_constraintStart_toStartOf="@+id/repository_name"
        app:layout_constraintTop_toBottomOf="@+id/repository_name" />

    <TextView
        android:id="@+id/tv_full_name"
        style="@style/RegularTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@+id/full_name"
        app:layout_constraintTop_toTopOf="@+id/full_name" />

    <TextView
        android:id="@+id/tv_language"
        style="@style/RegularTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@+id/language"
        app:layout_constraintTop_toTopOf="@+id/language" />

    <TextView
        android:id="@+id/language"
        style="@style/BoldTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="@+id/full_name"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <TextView
        android:id="@+id/forks"
        style="@style/BoldTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/forks_count"
        app:layout_constraintStart_toStartOf="@+id/language"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <TextView
        android:id="@+id/tv_forks_count"
        style="@style/RegularTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@+id/forks"
        app:layout_constraintTop_toTopOf="@+id/forks" />

    <TextView
        android:id="@+id/description"
        style="@style/BoldTextStyle.MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/forks"
        app:layout_constraintTop_toBottomOf="@+id/forks" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/RegularTextStyle.MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:ellipsize="end"
        android:maxLines="100"
        app:layout_constraintTop_toBottomOf="@+id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>