<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BoldTextStyle.LargeText"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/repository"
        app:layout_constraintStart_toStartOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image_view"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/repository"
        tools:listitem="@layout/item_repo" />

    <ImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="@dimen/large_avatar"
        android:layout_height="@dimen/large_avatar"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BoldTextStyle.LargeText"
        android:layout_marginStart="@dimen/large_margin"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
        app:layout_constraintTop_toTopOf="@+id/avatar_image_view" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/RegularTextStyle.LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/user_name"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/login" />
</androidx.constraintlayout.widget.ConstraintLayout>